--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 #      Main Configs       #
 # ----------------------- #
 
-url: http://tkbctf.github.io
+url: http://tkbctf.info
 title: tkbctf
 subtitle: CAPTURE THE FUTURE.
 author: tkbctf team
